		~/Downloads/flexpath/flexpath_adios_1_12_gnu_mvapich_tauperl chaos_bootstrap.pl adios-1.12 $HOME/envs/Flexpath_gcc_mvapich_tau &> config.lifen.log
	raw_dspacesraw_gcc_mvapich
----------------------------------------------------------------------------------
----------------------------------------------------------------------------------
## Oct 20
	https://github.iu.edu/IUPUI-CS-HPC/data_broker_lammps/wiki/compile&linking

tau with adios and dataspaces
	now use old version in 
	$ENV{WORK}/envs/Dataspacesroot_tau, install from
	/home/fli5/Downloads/dataspaces/dataspaces-1.6.2-gcc-mvapich-tau
	$ENV{WORK}/envs/backup/ADIOSroot_tau_1.11

## Oct 10
	build flexpath
## Oct 8
	impi works, using bridges default, use intel packages for all softwares
	i can also use more processes pernode
	all scripts/CMakeLists use new path with _intel

## Oct 14
	https://software.intel.com/en-us/forums/intel-clusters-and-hpc-technology/topic/702213

	
## Oct 2
#### fixing:
	1. comment out dataspaces locktype specification in adios_staging, as it
	does in adios staging example. (then type 1 lock will be used)
	2. use 2-d dimesions as in native dspaces?
	3. add timeout for adios_read_open, reader applications will try multiple
	times until stream is available.

	adios_dspaces with 1 server process: 230s
	adios_dimes with 1 server process: 155.54s
#### changed:
	now adios_staging use 4 server processes

## Oct 1 
	should try adios_staging skeletopn code
	1810216
		adios_staging with separate output
			consumer read is not performed

## Sep 29
	todo:
	adios_staging:
		Sep 27, else if fixed, but get blocked:
		check adios open mode, should it be opened in each step?(w in first step,
	and a in succeding steps, as in examples/staging/..genarray_stream)
## Sep 28
	todo
		adios_staging
		larger native_dimes

## Sep 27
	changes: 
		filename(scripts scripts and reader name
	fixing: adios reader initialization
## Sep 26
	dimes:
		sync before each step,
		also sync after the last step