@@ -1,0 +1,39 @@
+#!/bin/bash
+#SBATCH --job-name="sim_only"
+#SBATCH --output="results/%j.out"
+#SBATCH --partition=RM
+#SBATCH --nodes=4
+#SBATCH --ntasks-per-node=28
+#SBATCH -t 00:30:00
+#SBATCH --export=ALL
+
+#SBATCH --mail-type=BEGIN
+# send mail to this address
+#SBATCH --mail-user=lifen@iupui.edu
+
+#This job runs with 2 nodes, 24 cores per node for a total of 48 cores.
+#ibrun in verbose mode will give binding detail ##################parameter setting#################
+CASE_NAME=sim_only
+FILESIZE2PRODUCE=256 # 64*64*256*2*8 = 16MB per proc
+NSTOP=100 # how many steps
+
+# procs placement
+num_apps=1
+
+# slots used by this app
+procs_this_app=(64)
+
+# number of nodes used by this app
+nodes_this_app=(4)
+
+
+PBS_O_HOME=$HOME
+PBS_O_WORKDIR=$(pwd)
+export SCRATCH_DIR=${SCRATCH}/data_broker_adios/${SLURM_JOBID}
+
+export WORK=$HOME
+unset MyTransport
+
+source ${PBS_O_WORKDIR}/scripts/sim_only.sh
+
+
