@@ -2,7 +2,7 @@
 #SBATCH --job-name="native_dspaces_nokeep"
 #SBATCH --output="results/%j.out"
 #SBATCH --partition=RM
-#SBATCH --nodes=8
+#SBATCH --nodes=16
 #SBATCH --ntasks-per-node=28
 #SBATCH -t 00:30:00
 #SBATCH --export=ALL
@@ -18,10 +18,10 @@ NSTOP=100 # how many steps
 num_apps=3
 
 # slots used by this app
-procs_this_app=(8 64 32)
+procs_this_app=(16 96 48)
 
 # number of nodes used by this app
-nodes_this_app=(2 4 2)
+nodes_this_app=(4 8 4)
 
 
 PBS_O_HOME=$HOME
